Compiling with lambda build b69 + Stream